[project]
name = "pydsa_lab"
version = "0.1.0"
description = "Visualizador de estructuras de datos y algoritmos con Streamlit + Graphviz"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Paul Soria" }]
dependencies = [
  "streamlit>=1.40",
  "graphviz>=0.20",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "types-requests>=2.32",
  "pre-commit>=4.0",
]

# Si estás usando layout tipo "src/", activa esto con tu herramienta (uv/pip editable)
# y crea: src/pydsa_lab/__init__.py

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"] # el largo lo controla el formatter
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=core --cov-report=term-missing"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["core"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 80

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
exclude = ["pages*", "assets*", "tests*", ".streamlit*"]
